refactor: show user name

--- a/views/layouts/content.html
+++ b/views/layouts/content.html
@@ -25,7 +25,9 @@
     <div class="col-sm-3">
       <div id="o-header-drawer" class="collapse d-sm-block o-header__drawer">
 
+        <!-- Close button -->
         <div class="pt-2">
+          <!-- Displayed only on small screen -->
           <button class="o-toggle" 
             type="button" 
             data-toggle="collapse" 
