--- a/views/partials/paywall-promo.html
+++ b/views/partials/paywall-promo.html
@@ -1,4 +1,4 @@
-<div class="row flex-row-reverse">
+<div class="row flex-row-reverse mb-3">
   <div class="col-sm-4">
     <div class="box-16-9">
       <img src="{{promo.coverUrl}}" alt="">
@@ -6,8 +6,8 @@
   </div>
 
   <div class="col-sm-8">
-    <h2>{{promo.heading}}</h2>
-    <h3>{{promo.subHeading}}</h3>
+    <h2 class="mb-3">{{promo.heading}}</h2>
+    <h3 class="mb-3">{{promo.subHeading}}</h3>
     {% for p in promo.content | split %}
       <p>{{p}}</p>
     {% endfor %}
